--- a/backend/package.json
+++ b/backend/package.json
@@ -54,6 +54,7 @@
 		"@nestjs/platform-fastify": "^9.3.12",
 		"@ory/kratos-client": "^0.11.1",
 		"@prisma/client": "^4.12.0",
+		"@trpc/server": "^10.19.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"dotenv-defaults": "^5.0.2",
