Pending changes exported from your codespace

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -43,12 +43,9 @@
 		"next-env.d.ts",
 		"**/*.ts",
 		"**/*.tsx",
+    "**/*.jsx",
 		"jest.setup.ts",
 		"jest.config.ts",
-		"src/pages/api/__coverage__.js",
-		"src/components/dashboard/NavLink.jsx",
-		"src/components/dashboard/DropdownMessage.jsx",
-		"src/components/dashboard/DropdownDefault.jsx",
-		"src/components/dashboard/ChartFour.jsx"
+		"src/pages/api/__coverage__.js"
 	]
 }
