--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
 		"@fastify/routes-stats": "^3.4.0",
 		"@fastify/secure-session": "^6.0.0",
 		"@fastify/sensible": "^5.2.0",
+		"@fastify/static": "^6.10.0",
 		"@fastify/swagger": "^8.3.1",
 		"@fastify/swagger-ui": "^1.5.0",
 		"@fastify/view": "^7.4.1",
@@ -55,6 +56,7 @@
 		"@ory/kratos-client": "^0.11.1",
 		"@prisma/client": "^4.12.0",
 		"@trpc/server": "^10.19.1",
+		"argon2": "^0.30.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"dotenv-defaults": "^5.0.2",
